--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,8 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
 		<app.runtime>4.4.0-20211026</app.runtime>
-		<mule.maven.plugin.version>3.5.2</mule.maven.plugin.version>
+		<!-- <mule.maven.plugin.version>3.5.2</mule.maven.plugin.version> -->
+		<mule.tools.version>1.7</mule.tools.version>
 	</properties>
 
 	<build>
@@ -27,7 +28,7 @@
 			<plugin>
 				<groupId>org.mule.tools.maven</groupId>
 				<artifactId>mule.maven.plugin</artifactId>
-				<version>${mule.maven.plugin.version}</version>
+				<version>${mule.tools.version}</version>
 				<extensions>true</extensions>
 				<configuration>
 					<cloudHubDeployment>
