--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.mycompany</groupId>
 	<artifactId>logger</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
-	
+	<packaging>mule-application</packaging>
 
 	<name>logger</name>
 
